MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/mfg_Production_Batch_Unit__c.object-meta.xml
<CustomObject>
    <label>Production Batch Unit</label>
    <nameField>
        <displayFormat>PBU-{YYYY}{MM}{DD}-{0000000000}</displayFormat>
        <label>Production Batch Unit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Batch Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>