MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_Asset__c.field-meta.xml
<CustomField>
    <fullName>mfg_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Asset is Created after the product is delivered and confirmed by the customer.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Production Batch Units</relationshipLabel>
    <relationshipName>Production_Batch_Units</relationshipName>
    <type>Lookup</type>
</CustomField>