MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>mfg_Asset_Number__c</fullName>
    <formula>mfg_Asset__r.mfg_Asset_Number__c</formula>
    <inlineHelpText>Asset Number is useful to track the product after sales.</inlineHelpText>
    <label>Asset Number</label>
    <type>Text</type>
</CustomField>