MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_End_Time__c.field-meta.xml
<CustomField>
    <fullName>mfg_End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>