MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_Is_Reserved__c.field-meta.xml
<CustomField>
    <fullName>mfg_Is_Reserved__c</fullName>
    <formula>NOT(ISBLANK( mfg_Order_Product__c ))</formula>
    <inlineHelpText>Identifies whether this unit is currently reserved for an order.</inlineHelpText>
    <label>Is Reserved ?</label>
    <type>Checkbox</type>
</CustomField>