MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_Is_Shipment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>mfg_Is_Shipment_Scheduled__c</fullName>
    <formula>NOT(ISBLANK( mfg_Transport_Product__c ))</formula>
    <inlineHelpText>Identifies whether this unit is currently Scheduled for shipment.</inlineHelpText>
    <label>Is Shipment Scheduled ?</label>
    <type>Checkbox</type>
</CustomField>