MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_Production_Batch__c.field-meta.xml
<CustomField>
    <fullName>mfg_Production_Batch__c</fullName>
    <label>Production Batch</label>
    <referenceTo>mfg_Production_Batch__c</referenceTo>
    <relationshipLabel>Production Batch Units</relationshipLabel>
    <relationshipName>Production_Batch_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>