MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>mfg_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>