MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/fields/mfg_Transport_Product__c.field-meta.xml
<CustomField>
    <fullName>mfg_Transport_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Product</label>
    <referenceTo>mfg_Transport_Product__c</referenceTo>
    <relationshipLabel>Production Batch Units</relationshipLabel>
    <relationshipName>Production_Batch_Units</relationshipName>
    <type>Lookup</type>
</CustomField>