MFG Ready Version/force-app/main/default/objects/mfg_Production_Batch_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Status__c</columns>
    <columns>mfg_Quality_Check__c</columns>
    <columns>mfg_Production_Batch__c</columns>
    <columns>mfg_Product__c</columns>
    <columns>mfg_Inventory__c</columns>
    <columns>mfg_Transport_Product__c</columns>
    <columns>mfg_Order_Product__c</columns>
    <columns>mfg_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>